examples/lifetime.ayla
egg a<2> = 5

putln(a) // 5
putln(a) // 5
putln(a) // error